--- a/package.json
+++ b/package.json
@@ -3,26 +3,47 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "build": "webpack --mode production",
-    "start:dev": "webpack-dev-server --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@hot-loader/react-dom": "^16.13.0",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.2",
+    "html-webpack-plugin": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.1.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
+    "styled-components": "^5.1.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  }
+    "ts-loader": "^8.0.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.3",
+    "@testing-library/react": "^10.4.8",
+    "@types/webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.0",
+    "jest": "^26.4.0",
+    "@types/jest": "^26.0.10",
+    "ts-jest": "^26.2.0"
+  },
+  "scripts": {
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --mode production --config webpack.prod.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "resolutions": {
+    "@types/webpack": "^4.44.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hoogeveen/resume-generator-react"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hoogeveen/resume-generator-react/issues"
+  },
+  "homepage": "https://github.com/hoogeveen/resume-generator-react#readme"
 }
