--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1",
+    "ts-loader": "^8.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "ts-loader": "^8.0.2"
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.3",
