--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.2",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -30,7 +31,8 @@
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --mode production --config webpack.prod.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "publish": "gh-pages -d dist"
   },
   "resolutions": {
     "@types/webpack": "^4.44.1"
@@ -45,5 +47,5 @@
   "bugs": {
     "url": "https://github.com/hoogeveen/resume-generator-react/issues"
   },
-  "homepage": "https://github.com/hoogeveen/resume-generator-react#readme"
+  "homepage": "https://hoogeveen.github.io/resume-generator-react"
 }
