--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.2",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^4.3.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
     "styled-components": "^5.1.1",
     "ts-loader": "^8.0.2",
     "ts-node": "^9.0.0",
@@ -19,13 +17,9 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.3",
-    "@testing-library/react": "^10.4.8",
     "@types/webpack-dev-server": "^3.11.0",
-    "webpack-dev-server": "^3.11.0",
-    "jest": "^26.4.0",
-    "@types/jest": "^26.0.10",
-    "ts-jest": "^26.2.0"
+    "file-loader": "^6.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "dev": "webpack-dev-server --open --config webpack.dev.js",
