--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "validate": "tsx scripts/validate-data.ts",
     "build": "npm run validate && tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "gh-pages": "^3.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zod": "^3.25.76"
